Sat Jun  1 15:14:52 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: Don't print decimals with the precentages.
	Major update of counting, and printing counts. Cleaned up
	variables, corrected counting, made display more consistent and
	clear.

Wed May 29 21:18:26 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: Small fixes to support lwp-win32 as well, thanks to
	Martin Cleaver.

Mon May 27 09:21:30 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: oops, small error in regexp caused script to append a
	slash to almost all start-url's. Fixed.
	
	* checkbot (handle_doc): External links without full URL's were
	not always handled properly.

Sun May 26 10:04:39 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: If the starting URL doesn't end in a slash, and
	doesn't have an extension, assume we need to add a slash.

	* index.html: Add version number to web page, and make sue it gets
	updated automatically.

Mon May 13 15:06:05 1996  Hans de Graaff  <J.J.deGraaff@twi.tudelft.nl>

	* checkbot: Added LWP version number to agent field, changed page
	update policy, and updated script to LWP5b13.

Sat May  4 21:38:56 1996  Hans de Graaff  <Hans.deGraaff@twi72.twi.tudelft.nl>

	* checkbot: Changed checked array to an associative array. Will
	consume more memory, but drastically cut back on lookup time.
	
	Rewrote handle_url logic to be more clear. Also fixed bug where
	servers would be added to the list unjustly.

	Sleep was only done on problem links, not after each request.

	Also added checks for already checked links while scanning through
	the document, and only add those links not checked to the queue.

	Add percentage problem links for each individual server.

Mon Apr 29 08:43:12 1996  Hans de Graaff  <J.J.deGraaff@twi.tudelft.nl>

	* checkbot: Deal with unknown or non-determinable server types.
	
	Only add links to the external queue when we know we can check